--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "404-page": "^1.0.4",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
